<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity"
    android:background="#F3ECE7"
    >

    <ImageView
        android:src="@drawable/pomodoro_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_register"
        android:hint="Username"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:autofillHints="Username"
        android:inputType="text"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_register"
        android:layout_below="@+id/username_register"
        android:hint="Password"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:autofillHints="Password"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/retype_password"
        android:layout_below="@+id/password_register"
        android:hint="Retype Password"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:autofillHints="Retype Password"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="REGISTER"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@+id/retype_password"
        android:layout_margin="20dp"
        android:textSize="20sp"
        />

</RelativeLayout>