<resources>
    <string name="app_name">Pomodoro TNT</string>
    <string name="task_list">Task List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_success">Success</string>
    <string name="save">Save</string>
    <string name="new_task">New Task</string>
    <string name="tasks">Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="task_name">Task Name</string>
    <string name="session_type_default">Session Type</string>
    <string name="session_type_work">Keep working</string>
    <string name="session_type_break">Take a break</string>
</resources>